namespace Zent.Iso20022.InterfaceAgreement.IsoModel.SimpleTypes;

internal class Doclet
{
    internal required string Id { get; init; }
    internal string? Content { get; init; }
    internal string? Type { get; init; }
}
