namespace Zent.Iso20022.InterfaceAgreement.IsoModel.SimpleTypes;

internal class Elements
{
    internal required string Id { get; init; }
    internal string? Name { get; init; }
    internal string? Value { get; init; }
}
