namespace Zent.Iso20022.InterfaceAgreement.IsoModel.SimpleTypes;

internal class NamespaceList
{
}
